fix RSSI input invisible

--- a/static/styles.css
+++ b/static/styles.css
@@ -148,6 +148,16 @@ body {
     border-bottom: 1px solid #666666;
 }
 
+#rssi-input {
+    /* remove all decoration */
+    border: none;
+    outline: none;
+    background-color: transparent;
+    box-shadow: none;
+   
+    border-bottom: 1px solid #666666;
+}
+
 .login-required {
     display: none;
 }
